...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.066666666666666666" green="0.67843137254901964" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zvz-LZ-09X" customClass="TextField" customModule="CodeChallenge" customModuleProvider="target">
                                <rect key="frame" x="32" y="135" width="311" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="email" label="email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="sEu-Iy-BYP"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.066666666669999999" green="0.67843137249999996" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="smL-as-Eb2" customClass="TextField" customModule="CodeChallenge" customModuleProvider="target">
                                <rect key="frame" x="32" y="226" width="311" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="password" label="password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="3ST-Ha-v3f"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SDm-9C-QQI">
                                <rect key="frame" x="72" y="356" width="231" height="34"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="login" label="login">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="LMI-KA-Dfv"/>
                                </constraints>
                                <state key="normal" title="LOGIN">
...
